# hearingtest

./: .gitignore  1_build_conan.sh  2_build_nonconan.sh  CMakeLists.txt  README.md  conanfile.txt  ht.sh  koppany-20241110.m  tamas-20241110-1814.m
cmake/: warnings_clang.cmake  warnings_gcc.cmake
src/: CMakeLists.txt
src/hearingtest/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  main.cpp  pch.h
src/lib/: CMakeLists.txt  lib.h  pch.h
